--- a/app/styles/login.css
+++ b/app/styles/login.css
@@ -100,7 +100,7 @@
   color: var(--background);
 }
 
-.title {
+.login-title {
   font-size: 1.75rem;
   color: var(--color);
   margin-bottom: 2rem;
@@ -390,7 +390,7 @@
     }
   }
 
-  .title {
+  .login-title {
     font-size: 1.5rem;
     margin-bottom: 1.5rem;
   }
@@ -437,7 +437,8 @@
 
   .forgot-password-link {
     font-size: 0.9rem;
-    margin: 0.75rem auto;
+    /* margin: 0.75rem auto; */
+    margin: 0px;
   }
 
   .signup-prompt {
@@ -497,7 +498,7 @@
     padding: 1.25rem;
   }
 
-  .title {
+  .login-title {
     font-size: 1.35rem;
     margin-bottom: 1.25rem;
   }
