--- a/app/styles/carousel.css
+++ b/app/styles/carousel.css
@@ -4,8 +4,8 @@
   height: 350px;
   overflow: hidden;
   box-sizing: border-box;
-  padding: 0 7px;
   padding-bottom: 10px;
+  margin-top: 3px;
 }
 
 .slider {
@@ -60,7 +60,6 @@
 @media screen and (max-width: 1100px) {
   .slider-container {
     padding: 0;
-    padding: 0 7px;
     padding-bottom: 10px;
   }
 }
