--- a/app/globals.css
+++ b/app/globals.css
@@ -39,13 +39,13 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #00cc7d;
+  background-color: #FFB200;
   border-radius: 10px;
   border: 2px solid #1a1a1a;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #008f61;
+  background-color: #FFB200;
 }
 
 
