clear cached automatically when user closes the website

--- a/app/styles/wallpaperCard.css
+++ b/app/styles/wallpaperCard.css
@@ -2,7 +2,7 @@
   position: relative;
   border-radius: 8px;
   overflow: hidden;
-  background-color: #f0f0f0;
+  background-color: #121212;
   cursor: pointer;
   width: 100%;
   height: fit-content;
